--- a/track.html
+++ b/track.html
@@ -5,7 +5,12 @@
     <title>r0ket tr4cker</title>
 
     <script type="text/javascript" src="static/jquery-1.7.1.min.js"></script>
-    <script type="text/javascript" src="static/helper.js"></script>
+    <script type="text/javascript" src="static/classes/helper.js"></script>
+
+    <script type="text/javascript" src="static/classes/r0ket.js"></script>
+    <script type="text/javascript" src="static/classes/radar.js"></script>
+    <script type="text/javascript" src="static/classes/commandcenter.js"></script>
+
     <script type="text/javascript" src="static/main.js"></script>
 
     <link rel="stylesheet" type="text/css" href="static/main.css" media="all">
