minor changed (commentary, css)

--- a/track.html
+++ b/track.html
@@ -19,8 +19,10 @@
 
     <h1>28C3 R0ket Tracking</h1>
 
-    <div id="dbg">
-
+    <div id="controls">
+        <h2>Stalk a R0ket</h2>
+        <input type="text" size="10" id="r0ketid" value="">
+        <input type="submit" value="Stalk!">
     </div>
     
     <div id="visual">
