added layer feature

--- a/track.html
+++ b/track.html
@@ -9,6 +9,7 @@
 
     <script type="text/javascript" src="static/classes/r0ket.js"></script>
     <script type="text/javascript" src="static/classes/radar.js"></script>
+    <script type="text/javascript" src="static/classes/floor.js"></script>
     <script type="text/javascript" src="static/classes/commandcenter.js"></script>
 
     <script type="text/javascript" src="static/main.js"></script>
@@ -22,7 +23,9 @@
     <div id="controls">
         <h2>Stalk a R0ket</h2>
         <input type="text" size="10" id="r0ketid" value="">
+        <div id="floormenu"></div>
     </div>
+    
     
     <div id="visual">
         <canvas id="paper"></canvas>
