--- a/track.html
+++ b/track.html
@@ -12,6 +12,7 @@
     <script type="text/javascript" src="static/classes/floor.js"></script>
     <script type="text/javascript" src="static/classes/r0ket.js"></script>
     <script type="text/javascript" src="static/classes/radar.js"></script>
+    <script type="text/javascript" src="static/classes/floorcontroller.js"></script>
     <script type="text/javascript" src="static/classes/commandcenter.js"></script>
 
     <script type="text/javascript" src="static/main.js"></script>
@@ -31,7 +32,7 @@
     
     <div id="visual">
         <canvas id="paper"></canvas>
-    </div>
+    </div> 
 
 </body>
 </html>
