--- a/track.html
+++ b/track.html
@@ -23,8 +23,9 @@
     <h1>28C3 R0ket Tracking</h1>
 
     <div id="controls">
-        <h2>Stalk a R0ket</h2>
+        <h2>Stalk a nick:</h2>
         <input type="text" size="10" id="r0ketid" value="">
+        <h2>Floors:</h2>
         <div id="floormenu"></div>
     </div>
     
