added github link, disabled form without function and added a little description to the floor-list

--- a/track.html
+++ b/track.html
@@ -19,13 +19,13 @@
     <link rel="stylesheet" type="text/css" href="static/main.css" media="all">
 </head>
 <body>
-
+<a href="https://github.com/Beerweasle/28C3-r0ket-tr4cking"><img style="position: absolute; top: 0; right: 0; border: 0;z-index: 10;" src="https://a248.e.akamai.net/assets.github.com/img/abad93f42020b733148435e2cd92ce15c542d320/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677265656e5f3030373230302e706e67" alt="Fork me on GitHub"></a>
     <h1>28C3 R0ket Tracking</h1>
 
     <div id="controls">
         <h2>Stalk a nick:</h2>
-        <input type="text" size="10" id="r0ketid" value="">
-        <h2>Floors:</h2>
+        <input type="text" size="10" id="r0ketid" value="comming soon" disabled="true">
+        <h2>Floors (click to toggle):</h2>
         <div id="floormenu"></div>
     </div>
     
