added flattr link

--- a/track.html
+++ b/track.html
@@ -29,6 +29,8 @@
         <input type="text" size="10" id="r0ketid" value="comming soon" disabled="true">
         <h2>Floors (click to toggle):</h2>
         <div id="floormenu"></div>
+        <br/>
+        <a href="https://flattr.com/thing/458471" id="flattr" style="color: lime !important;">Support us via Flattr.</a>
     </div>
     
     
