made flattr button smaller

--- a/track.html
+++ b/track.html
@@ -43,11 +43,10 @@
         <h2>Floors (click to toggle):</h2>
         <div id="floormenu"></div>
         <br/>
-        <a href="http://hackerspace-bamberg.de/Kategorie:Projekt#r0ket-Tr4cking_.40_28C3" class="navlink" >Project page.</a>
+        <a href="http://hackerspace-bamberg.de/Kategorie:Projekt#r0ket-Tr4cking_.40_28C3" class="navlink"  >Project page.</a>
         <br/>
         <br/>
-        <br/>
-        <a class="FlattrButton" style="display:none;" href="http://hackerspace-bamberg.de/Kategorie:Projekt#r0ket-Tr4cking_.40_28C3"></a>
+        <a class="FlattrButton" rev="flattr;button:compact;" style="display:none;" href="http://hackerspace-bamberg.de/Kategorie:Projekt#r0ket-Tr4cking_.40_28C3"></a>
         <noscript><a href="http://flattr.com/thing/458489/r0ket-tr4cking" target="_blank">
         <img src="http://api.flattr.com/button/flattr-badge-large.png" alt="Flattr this" title="Flattr this" border="0" /></a></noscript>
         
